--- a/FinalReport.Rmd
+++ b/FinalReport.Rmd
@@ -25,11 +25,11 @@ library(sjPlot)
 ```
 ## Abstract
 
-As vaccine hesitancy has become a pressing issue in efforts to combat the Covid-19 pandemic, it seems worth exploring how the sizable and vulnerable Medicare population was already utilizing vaccinations for an extant dangerous illness, influenza (flu). This leads to questions of "How has Medicare flu vaccination rates been changing over the last several years?" and "How does that rate vary across states?". To make these comparisons, a multilevel poisson model was fitted on Medicare claims data from 2013-2019, which yielded an overall fixed effect of a decline in the rate of flu shot distributions for that period of time, and states such as California which has the largest amount of Medicare patients showed an even steeper decline than the fixed effects. Comparisons of provider types were also explored, yielding a fixed effect increase of vaccination administration coming from entities rather than individuals. This is key information that could inform public health messaging strategies for a world that gets accustomed to frequent seasonal vaccinations for Covid-19.
+As vaccine hesitancy has become a pressing issue in efforts to combat the Covid-19 pandemic, it seems worth exploring how the sizable and vulnerable Medicare population was already utilizing vaccinations for an extant dangerous illness, influenza (flu). This leads to questions of "How has Medicare flu vaccination rates been changing over the last several years?" and "How does that rate vary across states?". To make these comparisons, a multilevel poisson model was fitted on Medicare claims data from 2013-2019, which yielded an overall fixed effect of a decline in the rate of flu shot distributions for that period of time, and states such as California which has the largest amount of Medicare patients showed an even steeper decline than the fixed effects. Comparisons of provider types were also explored, yielding a fixed effect increase of vaccination administration coming from entities rather than individuals. This is key information that could inform public health messaging strategies for a world that gets accustomed to frequent booster vaccinations for Covid-19.
 
 ## Introduction
 
-The United States Medicare program is a federal health insurance program that services predominately people 65 years of age and older. As of 2020, over 62.6 million people are enrolled with a projected increase of 50% over the next decade as all of the members of the "Baby Boomer" generation reach the qualifying age. Care for this population will put tremendous strain on the healthcare system, and it will become crucial to maximize individual participation in preventative health measures to reduce this burden. 
+The United States Medicare program is a federal health insurance program that services predominately people 65 years of age and older. As of 2020, over 62.6 million people are enrolled with a projected increase of 25% over the next decade as all of the members of the "Baby Boomer" generation reach the qualifying age. Care for this population will put tremendous strain on the healthcare system, and it will become crucial to maximize individual participation in preventative health measures to reduce this burden. 
 
 Caring for flu patients is one of those strenuous healthcare activities that can be reduced by vaccinations. Flu illness routinely hospitalizes hundreds of thousands of people every year and causes thousands of deaths, seasonal flu vaccination is estimated to reduce the risk of having to seek medical treatment by 40-60%. The Medicare population is a high proportion of these cases as they are a large proportion of the broader US population. However there are differences in the enrollment rates per state, which is important to take into consideration. An additional comparison worth exploring is the means by which Medicare patients pursue vaccinations in these state groupings; if more beneficiaries are getting vaccinated through organizations such as a local CVS pharmacy or their individual healthcare provider, this creates different avenues through which public health campaigns may be more effective.
 
@@ -296,7 +296,7 @@ There were some challenges fitting an optimal model that are noted in the append
 
 Another key limitation to this analysis comes from the data- it is impossible to get the true numbers of the Medicare beneficiaries that received flu shots from 2013-2019. If beneficiaries are able to obtain shots through a free clinic that did not require insurance to pay for it, then that scenario is unrecorded here. Another key restriction is the population estimates- the ACS survey is an estimate for patients that have both Medicare Part A and B, although it's estimated that 93% of Medicare patients do have both insurances and that an estimate for both can be a sufficient estimate for one, it is likely an overestimate for that Part B population and observed flu vaccination rates are likely higher. 
 
-Despite limitations, this analysis still produces interesting considerations. Given the observed decline in flu shot rates for the United States Medicare population as a whole for each year during this period, it is almost unsurprising that there were difficulties encountered getting people to comply during the initial Covid-19 vaccination campaign by public health officials. Furthermore seeing that of those who were getting vaccinated, an increased share were going to entities rather than individual care providers, which perhaps indicates an increased association of vaccination with corporations and governments rather than something a trusted care provider recommends and administers. While from an efficiency standpoint it makes sense that the future of seasonal vaccination administration likely lies in the hands of these entities, it is important for public health officials to take note so outreach strategies can be framed around this context.
+Despite limitations, this analysis still produces interesting considerations. Given the observed decline in flu shot rates for the United States Medicare population as a whole for each year during this period, it is almost unsurprising that there were difficulties encountered getting people to comply during the initial Covid-19 vaccination campaign by public health officials. Furthermore seeing that of those who were getting vaccinated, an increased share were going to entities rather than individual care providers, which perhaps indicates an increased association of vaccination with corporations and governments rather than something a trusted care provider recommends and administers. This is unsurprising given that there is a shortage of primary care physicians in the US and that the future of seasonal vaccination administration lies in the hands of these entities, so it is important for public health officials to take note so outreach strategies can be framed around this context.
 
 The state level comparison is a strength of this analysis. Different states have different shares of the Medicare population and therefore have different requirements for potential successful public vaccination campaigns. Knowing which states were observing sharper changes than average in flu vaccinations over time and which were deviating from the entity level comparison, gives an opportunity for more targeted messaging efforts. California for example, the state with the largest amount of Medicare Beneficiaries and would be a key state to focus on to make improvements, deviates somewhat from the trend of increased share of entity level vaccination. Considering that it is a large state with a mix of urban and rural areas, it is possible that certain people do not have convenient access to either a pharmacy or a care provider for geographic reasons, and understanding these challenges can be key to making improvements in vaccination rates.
 
