--- a/FinalReport.Rmd
+++ b/FinalReport.Rmd
@@ -31,7 +31,7 @@ As vaccine hesitancy has become a pressing issue in efforts to combat the Covid-
 
 The United States Medicare program is a federal health insurance program that services predominately people 65 years of age and older. As of 2020, over 62.6 million people are enrolled with a projected increase of 25% over the next decade as all of the members of the "Baby Boomer" generation reach the qualifying age. Care for this population will put tremendous strain on the healthcare system, and it will become crucial to maximize individual participation in preventative health measures to reduce this burden. 
 
-Caring for flu patients is one of those strenuous healthcare activities that can be reduced by vaccinations. Flu illness routinely hospitalizes hundreds of thousands of people every year and causes thousands of deaths, seasonal flu vaccination is estimated to reduce the risk of having to seek medical treatment by 40-60%. The Medicare population is a high proportion of these cases as they are a large proportion of the broader US population. However there are differences in the enrollment rates per state, which is important to take into consideration. An additional comparison worth exploring is the means by which Medicare patients pursue vaccinations in these state groupings; if more beneficiaries are getting vaccinated through organizations such as a local CVS pharmacy or their individual healthcare provider, this creates different avenues through which public health campaigns may be more effective.
+Caring for flu patients is one of those strenuous healthcare activities that can be reduced by vaccinations. Flu illness routinely hospitalizes hundreds of thousands of people every year and causes thousands of deaths, seasonal flu vaccination is estimated to reduce the risk of having to seek medical treatment by 40-60%. The Medicare population is a high proportion of these cases as they are a large proportion of the broader US population. However there are differences in the enrollment rates per state, which is important to take into consideration. An additional comparison worth exploring is the means by which Medicare patients pursue vaccinations in these state groupings; if more beneficiaries are getting vaccinated through organizations such as a local pharmacy or their individual healthcare provider, this creates different avenues through which public health campaigns may be more effective.
 
 Multilevel poisson modeling is used to assess these comparisons in flu vaccinations rates among this population.
 
